--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.7",
+    "alphanumeric-encoder": "^1.6.0",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
